--- a/public/lib/animate/animate.css
+++ b/public/lib/animate/animate.css
@@ -112,7 +112,7 @@
   animation-name: flash;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - http://github.com/nickpettit/glide */
 
 @-webkit-keyframes pulse {
   from {
@@ -490,7 +490,7 @@
   animation-name: tada;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - http://github.com/nickpettit/glide */
 
 @-webkit-keyframes wobble {
   from {
@@ -2848,7 +2848,7 @@
   animation-name: jackInTheBox;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - http://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollIn {
   from {
@@ -2883,7 +2883,7 @@
   animation-name: rollIn;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - http://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollOut {
   from {
